--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <h1>Your Name</h1>
 
-  <img src="https://placehold.it/200x200" alt="Your Name">
+  <img src="https://ibb.co/MMBxBLY" alt="Your Name">
 
   <p>Write a short paragraph about yourself or some placeholder text.</p>
   <p>A second short paragraph about yourself or some placeholder text.</p>
