--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <h1>Your Name</h1>
 
-  <img src="https://ibb.co/MMBxBLY" alt="Your Name">
-
+  <img src="https://i.ibb.co/xJFtFQp/1528931244376-1.jpg" alt="Your Name">
+  
   <p>Write a short paragraph about yourself or some placeholder text.</p>
   <p>A second short paragraph about yourself or some placeholder text.</p>
 
