--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
   <img src="https://i.ibb.co/xJFtFQp/1528931244376-1.jpg" alt="Your Name">
   
-  <p>Write a short paragraph about yourself or some placeholder text.</p>
-  <p>A second short paragraph about yourself or some placeholder text.</p>
+  <p>The high temperature for today is 94 degrees. I prever warmer to colder. How about you?</p>
+  <p>I did not expect Philly to be this hot!</p>
 
   <ul>
-    <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-    <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+    <li><strong>Email:</strong> <a href="#">deangelo011@gmail.com</a></li>
+    <li><strong>Github:</strong> <a href="#">timelessauthentic.github.io/Dwilliams.github.io/#</a></li>
     <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
   </ul>
 
@@ -27,24 +27,22 @@
       <th>Games</th>
     </tr>
     <tr>
-      <td>The Hobbit</td>
-      <td>Hot Fuzz</td>
-      <td>Dark Souls</td>
+      <td>Captivate!</td>
+      <td>Snowpiercier</td>
+      <td>Basketball</td>
     </tr>
     <tr>
-      <td>The Name of the Wind</td>
-      <td>The Avengers</td>
-      <td>The Last of Us</td>
+      <td>The Theory of Human Motivation</td>
+      <td>The original "Fast & Furious"</td>
+      <td>Spaids!</td>
     </tr>
     <tr>
-      <td>The Girl With All the Gifts</td>
-      <td>The Matrix</td>
-      <td>Dragon Age: Origins</td>
+      <td>Being the Boss</td>
+      <td>Anything Dave Chapelle</td>
+      <td>Dave and Busters</td>
     </tr>
   </table>
 
-  <!-- Bonus link to last class page -->
-  <a href="../../../../1/Activities/04-Stu_MyFirst_HTML/Solved/my-first-bonus.html">My First HTML Bonus</a>
 
 </body>
 
