--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Activity 1: Basic HTML Bio</title>
+  
 </head>
 
-<body>
+<body style="background-color:green">
+  
 
   <h1>Your Name</h1>
 
