--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="background-color:green">
   
 
-  <h1>Your Name</h1>
+  <h1>DeAngelo Williams</h1>
 
   <img src="https://i.ibb.co/xJFtFQp/1528931244376-1.jpg" alt="Your Name">
   
